# ESP32_WaveShare_IDF

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.c
main/Events/: f9_event.c  f9_event.h
main/FLash/: config.c  config.h
main/LVGL_Driver/: LVGL_Driver.c
main/LVGL_UI/: actions.c  actions.h  common.h  images.c  images.h  screens.c  screens.h  ui_image_logo.c  ui_image_wifi_connected.c  ui_image_wifi_disconnected.c  ui_update.c  ui_update.h  user_keyboard.c  user_keyboard.h  vars.c  vars.h
main/MS5837/: MS5837.cpp  MS5837.h  ms5837_sensor.cpp  ms5837_sensor.h
main/PCF85063/: PCF85063.c  PCF85063.h
main/PC_COM/: pc_com.c  pc_com.h
main/Sntp/: sntp_time.cpp  sntp_time.h
main/WIFI/: user_wifi.c  user_wifi.h
main/WS_SERVER/: ws_server.c  ws_server.h
www/: apexcharts.min.js  index.html
