idf_component_register(
SRCS 
     "./main.c"
     "./LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
     "./LCD_Driver/ST7789.c"
     "./Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"        
     "./Touch_Driver/CST328.c"  
     "./LVGL_Driver/LVGL_Driver.c"
     "./I2C_Driver/I2C_Driver.c"
     "./PCF85063/PCF85063.c"
     "./PWR_Key/PWR_Key.c"
     "./Wireless/Wireless.c"
     "./LVGL_UI/actions.c"
     "./LVGL_UI/images.c"
     "./LVGL_UI/screens.c"
     "./LVGL_UI/styles.c"
     "./LVGL_UI/ui_image_logo.c"
     "./LVGL_UI/ui_image_wifi_connected.c"
     "./LVGL_UI/ui_image_wifi_disconnected.c"
     "./LVGL_UI/ui.c"
     "./LVGL_UI/ui_update.c"
     "./LVGL_UI/vars.c"
     "./LVGL_UI/user_keyboard.c"
     "./MS5837/MS5837.cpp"
     "./MS5837/I2Cbus.cpp"
     "./MS5837/ms5837_sensor.cpp"
     "./WS_SERVER/ws_server.c"
     "./Sntp/sntp_time.cpp"
     "./WIFI/user_wifi.c"

INCLUDE_DIRS 
     "./LCD_Driver/Vernon_ST7789T" 
     "./LCD_Driver" 
     "./Touch_Driver/esp_lcd_touch"     
     "./Touch_Driver"
     "./LVGL_Driver" 
     "./I2C_Driver"
     "./PCF85063"
     "./PWR_Key"
     "./Wireless"
     "./LVGL_UI"
     "./MS5837"
     "./WS_SERVER"
     "./Sntp"
     "./WIFI"
     "."
)

spiffs_create_partition_image(www ../www FLASH_IN_PROJECT)